# vdec_264_265

./: CMakeLists.txt  README.md  start.sh
src/: main.cpp  types.h  video_decoder.cpp  video_decoder.h
